--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="actionbar_height">50dp</dimen>
     <dimen name="normal_margin">14dip</dimen>
+    <dimen name="header_shadow_size">5dp</dimen>
 
 </resources>
