--- a/app/src/main/res/layout/fragment_glide.xml
+++ b/app/src/main/res/layout/fragment_glide.xml
@@ -3,17 +3,143 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
-    <TextView
-        android:id="@id/text1"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:background="@drawable/button_bg_gray"
-        android:text="load image"
-        android:gravity="center"
-        android:layout_height="50dp"/>
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@id/text1"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:text="url"/>
+
+        <TextView
+            android:id="@id/text2"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:text="res"/>
+
+        <TextView
+            android:id="@id/text3"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:text="file"/>
+
+        <TextView
+            android:id="@id/text4"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:text="file path"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@id/text5"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:text="round rect"/>
+
+        <TextView
+            android:id="@id/text6"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:text="blur"/>
+
+        <TextView
+            android:id="@id/text7"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:text="circle"/>
+
+        <TextView
+            android:id="@id/text8"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:text="download"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@id/text9"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:text="circle"/>
+
+        <TextView
+            android:id="@id/text10"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:text="blur"/>
+
+        <TextView
+            android:id="@id/text11"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:text="file"/>
+
+        <TextView
+            android:id="@id/text12"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/button_bg_gray"
+            android:gravity="center"
+            android:text="file path"/>
+
+
+    </LinearLayout>
 
     <ImageView
         android:id="@id/image1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
 
 </LinearLayout>
