--- a/app/src/main/res/layout/fragment_green_dao.xml
+++ b/app/src/main/res/layout/fragment_green_dao.xml
@@ -83,6 +83,7 @@
     <TextView
         android:id="@id/desc"
         android:padding="10dp"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
