--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -115,6 +115,9 @@
     <item name="right" type="id">right</item>
     <item name="my_actionbar" type="id">my_actionbar</item>
     <item name="recycler_view" type="id">recycler_view</item>
+    <item name="startThread" type="id">startThread</item>
+    <item name="test_handler" type="id">test_handler</item>
+    <item name="handler_thread" type="id">handler_thread</item>
 
 
 </resources>
